2007-01-17  Brian Warner  <warner@lothar.com>

	* contrib/darcs_buildbot.py: enhance to handle multiple patches
	being pushed at a time. This keeps state in the repository in a
	small file named .darcs_buildbot-lastchange, but that shouldn't
	interfere with normal repository operations. Fixes SF#1534049.
	* buildbot/clients/sendchange.py (Sender): make a single Sender
	capable of sending Changes with different usernames.

2006-12-11  Brian Warner  <warner@lothar.com>

	* buildbot/changes/freshcvsmail.py: mark this file as deprecated,
	scheduled for removal in 0.7.7 . The FCMaildirSource was moved to
	buildbot.changes.mail a long time ago, but I forgot to add the
	DeprecationWarning until now.

	* buildbot/process/maxq.py: remove this, the functionality now
	lives in buildbot.steps.maxq

	* buildbot/clients/debug.py: remove an unnecessary gnome.ui import
	* buildbot/clients/gtkPanes.py: remove unused import

	* buildbot/slave/trial.py: remove an unused/incomplete/buggy file,
	that was meant to provide a special Reporter to run inside trial
	and give the buildslave lots of machine-readable status. We never
	finished this project.

	* buildbot/changes/bonsaipoller.py: remove unused imports
	* buildbot/changes/svnpoller.py: same
	* buildbot/process/builder.py: same
	* buildbot/process/buildstep.py: same
	* buildbot/slave/bot.py: hush pyflakes warning
	* buildbot/status/tests.py: remove unused imports
	* buildbot/status/tinderbox.py: same
	* buildbot/steps/python_twisted.py: same

	* buildbot/process/step.py: remove this file, these names were
	deprecated in 0.7.5 and are now being removed.
	* buildbot/process/step_twisted.py: same
	* buildbot/test/test_steps.py (ReorgCompatibility): remove test

	* buildbot/twcompat.py: remove the empty file, yay it is gone

	* buildbot/twcompat.py (waitForDeferred): remove the monkeypatch,
	tw-2.0.0 and newer have the method we need.
	(getProcessOutputAndValue): same
	(which): remove this method, tw-2.0.0 t.p.procutils has it
